
    API changes:
    - StringGrid and StringTrees are deprecated.
    - The NullInterrupter is now a virtual base class to help reduce
      compile-time instantiation cost.

    Houdini:
    - A new HoudiniInterrupter has been added that derives from the
      NullInterrupter and the Interrupter is now deprecated. All the SOPs have
      been updated to use the new HoudiniInterrupter.

    Build:
    - As of this release, VFX Reference Platform 2019 is no longer supported.
      CMake now issues deprecation warnings for 2020 VFX Reference Platform
      version dependencies.
    - Build fixes for OpenVDB AX with C++17 and greater
    - Bumped the new blosc version future minimum to 1.17.0
    - OpenEXR is now optional for vdb_render. It can be enabled with
      -DUSE_EXR=ON.


Version 8.2.0 - In development

    New features:
    - Added tools::countActiveLeafVoxels(), tools::countInactiveVoxels(),
      tools::countInactiveLeafVoxels() and tools::activeTiles() to perform
      multi-threaded counting. The Tree methods now use these implementations.

    Improvements:
    - Moved from the deprecated TBB task scheduler to TBB arenas. Various
      methods now respect the TBB arena state they were invoked from.
    - Introduced a new thread/Threading.h header to consolidate calls to
      third-party threading methods.
    - Minor performance improvements to dilation calls in fast sweeping
      algorithms.
    - Added hsvtogrb() and rgbtohsv() AX helper functions for converting
      hue, saturation and value inputs to RGB values and vice-versa.
    - PointDataGrid conversion can now be performed using 32-bit float arrays.
    - Improved support for size_t grid types on systems where size_t is a
      unique type
      [Contributed by Brecht Van Lommel]
    - Minor performance improvements to dilation calls in fast sweeping
      algorithms
    - Add support for dilation in one direction and extending a field in one
      direction

    API changes: